<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1DA0B7"
    tools:context=".ui.DashboardActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_userImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/user_real_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/greet_user"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_userImage"
        app:layout_constraintStart_toStartOf="@+id/iv_userImage"
        app:layout_constraintTop_toBottomOf="@+id/iv_userImage" />

    <TextView
        android:id="@+id/tv_welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_note"
        android:textColor="#FEDD06"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_userName"
        app:layout_constraintStart_toStartOf="@+id/tv_userName"
        app:layout_constraintTop_toBottomOf="@+id/tv_userName"
        tools:layout_editor_absoluteY="219dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom_dashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcomeText">

        <TableLayout
            android:id="@+id/tl_bottom_dashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_background_dashboard_custom">

            <TableRow
                android:id="@+id/tr_bottom_dashboard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_asana_up"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/white_button_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/circle_bottom_dashboard" />

                        <ImageView
                            android:id="@+id/iv_asana"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/iv_asana_up"
                            app:layout_constraintHorizontal_bias="0.568"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/iv_asana_up"
                            app:layout_constraintVertical_bias="0.431"
                            app:srcCompat="@drawable/yoga_asanas" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_asana"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/asanas"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_Prana_up"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/white_button_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/circle_bottom_dashboard" />

                        <ImageView
                            android:id="@+id/iv_prana"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/iv_Prana_up"
                            app:layout_constraintHorizontal_bias="0.568"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/iv_Prana_up"
                            app:layout_constraintVertical_bias="0.431"
                            app:srcCompat="@drawable/breathing" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_prana"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/breathings"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_med_up"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/white_button_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/circle_bottom_dashboard" />

                        <ImageView
                            android:id="@+id/iv_med"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/iv_med_up"
                            app:layout_constraintHorizontal_bias="0.568"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/iv_med_up"
                            app:layout_constraintVertical_bias="0.431"
                            app:srcCompat="@drawable/meditation" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_med"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/meditations"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tr_bottom_dashboard2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_sleep_up"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/white_button_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/circle_bottom_dashboard" />

                        <ImageView
                            android:id="@+id/iv_sleep"
                            android:layout_width="80dp"
                            android:layout_height="60dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/iv_sleep_up"
                            app:layout_constraintHorizontal_bias="0.568"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/iv_sleep_up"
                            app:layout_constraintVertical_bias="0.431"
                            app:srcCompat="@drawable/sleep" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_sleep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sleep_info"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_activity_up"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/white_button_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/circle_bottom_dashboard" />

                        <ImageView
                            android:id="@+id/iv_activity"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/iv_activity_up"
                            app:layout_constraintHorizontal_bias="0.568"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/iv_activity_up"
                            app:layout_constraintVertical_bias="0.431"
                            app:srcCompat="@drawable/activity" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_timer_up"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/white_button_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:srcCompat="@drawable/circle_bottom_dashboard" />

                        <ImageView
                            android:id="@+id/iv_timer"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/iv_timer_up"
                            app:layout_constraintHorizontal_bias="0.568"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/iv_timer_up"
                            app:layout_constraintVertical_bias="0.431"
                            app:srcCompat="@drawable/timer" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_timer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_last"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_banner_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/yoga_dashboard" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>